--- a/estilos_proyecto.css
+++ b/estilos_proyecto.css
@@ -1,3 +1,4 @@
+ 
 @import url('https://fonts.googleapis.com/css2? family= Work+Sans & display=swap');
 
 
@@ -5,10 +6,22 @@
 
 
 body{
-    background-color: rgb(243, 240, 240);
+    background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(194,194,202,1) 10%, rgba(0,212,255,1) 100%);
     margin: 15px;
     font-size: 10px;
 }
+.zoom {
+    transition: transform .2s; 
+    cursor: pointer;
+    opacity: 0.6;
+}
+ 
+.zoom:hover {
+    transform: scale(1.5); 
+    opacity: 1;
+}
+
 .navegador{
     margin: auto;
     font-style: italic;
@@ -53,12 +66,15 @@ ul li a{
 .lista li{
     text-decoration: none;
     font-size: 15px;
+    display: block;
     /*font-family: Georgia, 'Times New Roman', Times, serif;
     color:rgb(4, 2, 7);*/
     cursor: pointer;
-    
-    
+   
 }
+
+
+
 
 .footer li{
     display: block;
@@ -92,6 +108,7 @@ ul li a{
 
 
 
+
 /* aca sigue la pag*/     
 .imagen{
     display: block;
@@ -102,6 +119,7 @@ ul li a{
 
 .lista{
     background: rgb(207, 201, 201);
+    
     flex-direction: row;
     flex-wrap: nowrap;
     align-items: flex-start;
