se agrego @keyframe al h1

--- a/estilos_proyecto.css
+++ b/estilos_proyecto.css
@@ -6,11 +6,28 @@
 
 
 body{
-    background: rgb(2,0,36);
-background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(194,194,202,1) 10%, rgba(0,212,255,1) 100%);
+    
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(194,194,202,1) 10%, rgba(0,212,255,1) 100%);
     margin: 15px;
     font-size: 10px;
 }
+
+h1 {
+    animation-duration: 2s;
+    animation-name: aparecer;
+    animation-iteration-count: infinite;
+ }
+ 
+ 
+ @keyframes aparecer {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+ }
+ 
 .zoom {
     transition: transform .2s; 
     cursor: pointer;
@@ -82,6 +99,7 @@ ul li a{
 }
 
 @media screen and (min-width: 768px){
+    
     body{
         margin: 50px;
         font-size: 20px;
@@ -101,13 +119,6 @@ ul li a{
 
 
 }
-
-
-
-
-
-
-
 
 /* aca sigue la pag*/     
 .imagen{
