--- a/estilos_proyecto.css
+++ b/estilos_proyecto.css
@@ -7,43 +7,22 @@
 
 body{
     
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(194,194,202,1) 10%, rgba(0,212,255,1) 100%);
+    background: linear-gradient(90deg, rgb(205, 204, 218) 0%, rgba(194,194,202,1) 10%, rgba(0,212,255,1) 100%);
     margin: 15px;
     font-size: 10px;
 }
 
-h1 {
-    animation-duration: 2s;
-    animation-name: aparecer;
-    animation-iteration-count: infinite;
- }
- 
- 
- @keyframes aparecer {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
- }
- 
-.zoom {
-    transition: transform .2s; 
-    cursor: pointer;
-    opacity: 0.6;
+header{
+    width: auto;
+    
 }
- 
-.zoom:hover {
-    transform: scale(1.5); 
-    opacity: 1;
-}
+
 
 .navegador{
     margin: auto;
     font-style: italic;
     font-size: 5px;
-    background-color: violet;
+    
 }
 
 .navegador li{
@@ -80,15 +59,6 @@ ul li a{
 
 
  }
-.lista li{
-    text-decoration: none;
-    font-size: 15px;
-    display: block;
-    /*font-family: Georgia, 'Times New Roman', Times, serif;
-    color:rgb(4, 2, 7);*/
-    cursor: pointer;
-   
-}
 
 
 
@@ -100,22 +70,50 @@ ul li a{
 
 @media screen and (min-width: 768px){
     
-    body{
-        margin: 50px;
-        font-size: 20px;
-    }
-    .navegador{
-        font-size: 20px;
+body{
+    margin: 50px;
+    font-size: 20px;
+}
+.zoom {
+    transition: transform .2s; 
+    cursor: pointer;
         
-    }
-
-    .navegador li{
-        display: inline-block;
-    }
+}
+     
+.zoom:hover {
+    transform: scale(1.5); 
+    opacity: 1;
+}
     
-    .footer li{
-        display: inline-block;
+
+h1 {
+    animation-duration: 2s;
+    animation-name: aparecer;
+    animation-iteration-count: infinite;
+}
+     
+     
+@keyframes aparecer {
+    0% {
+         opacity: 0;
+        }
+        100% {
+        opacity: 1;
+        }
     }
+     
+.navegador{
+    font-size: 20px;
+        
+}
+
+.navegador li{
+    display: inline-block;
+}
+    
+.footer li{
+    display: inline-block;
+}
 
 
 }
@@ -128,18 +126,6 @@ ul li a{
     
 }
 
-.lista{
-    background: rgb(207, 201, 201);
-    
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-items: flex-start;
-    
-}
-
-.lista_sub{
-    margin: 10%;
-}
 
 .imagen_paquetes{
     height: 250px;
@@ -152,17 +138,18 @@ ul li a{
     display:grid;
     grid-template-columns:repeat(4, 1fr);
     justify-items: center;
-    background-color: rgb(7, 7, 7);
-    padding: 30px 30px;
+    background-color: rgba(136, 121, 148, 0.377);
+    padding: 5px;
     margin-bottom:20px;
     box-sizing:border-box;
+    border-radius: 20px;
 }
 
 .galeria img{
-    width: 90%;
-    height: 200px;
+    width: 95%;
+    height: 250px;
     border-radius: 20px;
-    margin: 10px;
+    margin: 10px
 
 
 }
